@@ -81,12 +81,21 @@ class Float extends Property {
      */
     public function getJsonValue() {
 
-        // Ensuring we are getting real floating-point numbers.
-        return array_map(function($item) {
+        $val = array_map(function($item) {
 
             return (float)$item;
 
         }, $this->getParts());
+
+        // Special-casing the GEO property.
+        //
+        // See:
+        // http://tools.ietf.org/html/draft-ietf-jcardcal-jcal-04#section-3.4.1.2
+        if ($this->name==='GEO') {
+            return array($val);
+        } else {
+            return $val;
+        }
 
     }
 }
