@@ -5,6 +5,7 @@
 	* Fixed: Issue 36: Workaround for the recurrenceiterator and caldav events
 	  with a missing base event.
 	* Fixed: jCard encoding of TIME properties.
+	* Fixed: jCal encoding of REQUEST-STATUS, GEO and PERIOD values.
 
 3.0.0-beta2 (2013-06-10)
 	* Fixed: Corrected includes.php file.
